--- a/index.html
+++ b/index.html
@@ -8,57 +8,16 @@
 </head>
 <body>
 
-    <!-- SCREEN 1: MAIN MENU -->
-    <div id="main-menu-screen" class="screen">
-        <h1>The Forest of Love</h1>
-        <div>
-            <button id="continue-game-btn">Continue Saved Game</button>
-            <button id="new-game-btn">Start New Game</button>
-        </div>
-    </div>
-
-    <!-- SCREEN 2: THE ACTUAL GAME -->
     <div id="game-screen" class="screen">
-        <div id="world-space">
-            <!-- Game objects are dynamically created here by main.js -->
-        </div>
-
-        <!-- In-Game UI Elements -->
-        <div id="interaction-prompt">Press [SPACE] to Interact</div>
-
-        <div id="dialogue-overlay">
-            <div id="dialogue-name"></div>
-            <div id="dialogue-text"></div>
-            <div id="dialogue-choices"></div>
-        </div>
-
-        <!-- UI Modals -->
-        <div id="quest-log" class="modal">
-            <h2>Quest Log</h2>
-            <div class="content">
-                <div id="quest-list" class="list-panel"></div>
-                <div id="quest-details" class="detail-panel"></div>
-            </div>
-        </div>
-
-        <div id="critter-log" class="modal">
-            <h2>Critter Log</h2>
-            <div class="content">
-                <div id="resident-list" class="list-panel"></div>
-                <div id="critter-details" class="detail-panel"></div>
-            </div>
-        </div>
-
-        <div id="inventory" class="modal">
-            <h2>Inventory</h2>
-            <div id="inventory-grid" class="content"></div>
-        </div>
+        <canvas id="game-canvas"></canvas>
     </div>
 
     <!-- Script Loading Order is Critical -->
+    <script src="js/assets.js"></script>
     <script src="js/gameData.js"></script>
+    <script src="js/physics.js"></script>
+    <script src="js/renderer.js"></script>
     <script src="js/systems.js"></script>
-    <script src="js/ui.js"></script>
     <script src="js/interaction.js"></script>
     <script src="js/main.js"></script>
 
